OOZIE-3725 Drop support for the webui