@@ -68,8 +68,7 @@
         <oozie.test.forkMode>once</oozie.test.forkMode>
 
         <maven.test.redirectTestOutputToFile>true</maven.test.redirectTestOutputToFile>
-        <maven.test.java.opts>-Xmx2048m -da -XX:MetaspaceSize=512M -XX:MaxMetaspaceSize=1024M -XX:+CMSClassUnloadingEnabled
-                              -XX:+UseConcMarkSweepGC</maven.test.java.opts>
+        <maven.test.java.opts>-Xmx2048m -da -XX:MetaspaceSize=512M -XX:MaxMetaspaceSize=1024M</maven.test.java.opts>
         <maven.javadoc.opts>all</maven.javadoc.opts>
         <maven-dependency-plugin.version>3.0.2</maven-dependency-plugin.version>
 
